--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=secret
+spring.datasource.password=******
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
